--- a/WebShell/wwwroot/index.html
+++ b/WebShell/wwwroot/index.html
@@ -6,6 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./index.css">
+    <script defer src="./index.js"></script>
+    <script defer src="./webSocket.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -24,6 +26,5 @@
     </div>
 </form>
 
-<script src="./index.js"></script>
 </body>
 </html>
