fix focus caret and disable input when command run

--- a/WebShell/wwwroot/index.html
+++ b/WebShell/wwwroot/index.html
@@ -21,7 +21,7 @@
         <div class="command">
             <label for="input">$ user-command-> </label>
             <input type="text" autocomplete="off" id="input" autofocus/>
-            <span id="caret">&nbsp;</span>
+            <span class="caret">&nbsp;</span>
         </div>
     </div>
 </form>
