Edit readme, refactor, add auto scroll and small fix

--- a/WebShell/wwwroot/index.html
+++ b/WebShell/wwwroot/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="./index.css">
     <script defer src="./index.js"></script>
     <script defer src="./webSocket.js"></script>
-    <title>Document</title>
+    <title>WebShell</title>
 </head>
 <body>
 <div class="log">Status : <span id="status">Disconnected</span></div>
-<ul class="text">
+<ul class="text" >
 </ul>
 
 <form id="console">
